--- a/README
+++ b/README
@@ -14,7 +14,12 @@ time2time.py
 ------------
 Given a date/time in the format of "YYYY-MM-DD HH:MM:SS[.SSS]" in local time, 
 compute the corresponding MJD and MPM in UTC.  If no date/time is specified, the
-current local date/time is used for the conversion. 
+current local date/time is used for the conversion.
+
+mjd2local.py
+------------
+For a given MJD value or list of MJD values, return the range of local times 
+associated with that MJD.
 
 TBW
 ---
