--- a/DRX/README
+++ b/DRX/README
@@ -24,6 +24,11 @@ elevation in degrees) at a specified frequency.
 	be converted to binary packed files with the MCS/Executive commands megfg 
 	and medfg.
 
+generateDelaysMixed.py
+----------------------
+Modified version of generateDelays.py that forms the beam only with the X pol. and 
+leaves only the outlier (#258) on the Y pol.
+
 estimateBeam.py
 ---------------
 Use the LSL misc.beamformer's integer delay and sum to estimate the beam shape 
