Added a version of stationMaster (stationMaster2) that allows for blanking impulsive RFI events.

--- a/TBW/README
+++ b/TBW/README
@@ -13,6 +13,11 @@ Modified version of tbwSpectra.py that is included with LSL (version >= 0.4.0) t
 estimated the frequency (in MHz) of each dipole's resonance point and saves that 
 information along with time-average spectra to a NPZ file.
 
+stationMaster2.py
+-----------------
+Modified version of stationMaster.py that uses the 'ClipLevel' keyword in LSL >= 0.4.2
+to blank impulsive RFI events.
+
 smGUI.py
 --------
 GUI that interfaces with a NPZ file created by stationMaster.py that makes looking for
