Updated stationMaster.py to skip over TBN frames at the end of the file and updated the DRX/README file.

--- a/README
+++ b/README
@@ -27,6 +27,11 @@ Short script to read in a shelter.txt file (log of shelter temperature with each
 line consisting of a UNIX time stamp and a shelter temperature) and plot all of 
 the avaliable data.
 
+plotBoardTemp.py
+---------------
+Short script to read in a temp.txt file (log of DP FPGA temperatures) and plot 
+all of the avaliable data.
+
 TBW
 ---
 See the TBW/README file.
