--- a/DRX/Fringing/README
+++ b/DRX/Fringing/README
@@ -27,3 +27,13 @@ Y pol.  Accepts four command line arguments:
  3) stand number on Y pol.
  4) DRX filename
 
+simulateFringesBright.py
+------------------------
+Simulate fringes for a dipole-dipole data set using the lsl.sim.vis.buildSimData()
+function and the bright sources listed in lsl.sim.vis.srcs.
+
+simulateFringes.py
+------------------
+Similar to simulateFringesBright.py, but uses a ~1 degree resolution GSM model instead
+of only a collection of bright point sources.
+
