A few cleanups to various things.  Main changes are in the drxSpectra/drxWaterfall scripts so that they now don't choke on single tuning DRX files.  Also added a '-p' option to astroevents2.py to show the current locations of sources.  Some work on getting plotWaterfall.py to be multi-processor and cleaned up a few remaining bugs from the freq -> freq1/freq2 transition.

--- a/README
+++ b/README
@@ -21,6 +21,10 @@ mjd2local.py
 For a given MJD value or list of MJD values, return the range of local times 
 associated with that MJD.
 
+astroevents2.py
+---------------
+List the rise, transit, and set times for the brightest radio objects in the sky.
+
 plotShelterTemp.py
 ------------------
 Short script to read in a shelter.txt file (log of shelter temperature with each
