--- a/TBN/Calibration/README
+++ b/TBN/Calibration/README
@@ -1,6 +1,11 @@
 Calibration and Phase-and-Sum Beamforming Scripts
 =================================================
 
+simpleFringe.py
+---------------
+Simple script (with hard coded integration times) for performing time series
+cross-correlation of TBN data for all stands relative to the outlier (#258).
+
 phasedBeam.py
 ------------
 Given a reference file for calibration and a pointing azimuth and elevation 
@@ -10,6 +15,14 @@ phase-calib-Sun-38MHz.npz
 -------------------------
 Calibration file for phasedBeam.py at 37.90 MHz.
 
+phase-calib-Sun-50MHz.npz
+-------------------------
+Calibration file for phasedBeam.py at 50.00 MHz.
+
 phase-calib-Sun-74MHz.npz
 -------------------------
 Calibration file for phasedBeam.py at 74.03 MHz.
+
+phase-calib-Sun-84MHz.npz
+-------------------------
+Calibration file for phasedBeam.py at 84.00 MHz.
