Added a couple of basic HDF5 utilities to the (new) DRX/HDF5 directory.  Fixed a problem with the labeling of the offset in drxWaterfall.py.

--- a/DRX/README
+++ b/DRX/README
@@ -116,4 +116,11 @@ eyeDiagram2.py
 --------------
 Look for glitches in a DRX file by fitting a quantized sine wave to the data.
 
+Fringing
+--------
+See the Fringing/README file.
+
+HDF5
+----
+See the HDF5/README file.
 
