--- a/TBW/README
+++ b/TBW/README
@@ -7,6 +7,10 @@ Script for checking for missing frames and bad time tags in a full DP TBW captur
 If problems are found the error are noted and printed out.  It shouldn't be too hard
 to modify this for fewer inputs.
 
+tbw2hdf.py
+----------
+Export select stands from a TBW file to HDF5.
+
 stationMaster.py
 ----------------
 Modified version of tbwSpectra.py that is included with LSL (version >= 0.4.0) that 
