Updated time2time.py and mjd2local.py to use the new lsl.common.mcs time conversion functions.  mjd2local.py also supports converting a MJD,MPM pair to a date/time.

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ useful for identifying disks with the newer (and less reliable) firmware version
 
 time2time.py
 ------------
-Given a date/time in the format of "YYYY-MM-DD HH:MM:SS[.SSS]" in local time, 
+Given a date/time in the format of "YYYY/MM/DD HH:MM:SS[.SSS]" in local time, 
 compute the corresponding MJD and MPM in UTC.  If no date/time is specified, the
 current local date/time is used for the conversion.
 
