--- a/TBN/README
+++ b/TBN/README
@@ -3,15 +3,8 @@ TBN Commissioning Scripts
 
 checkTimetags.py
 ----------------
-Simple script for making sure that time tags update properly on the prototype DP 
-system.  This script won't work for the full DP system because of how the packets 
-are interleaved.
-
-checkTimetags2.py
------------------
-Modified version of checkTimetags.py that uses the LSL TBN ring buffer to reorder
-the interleaved packets.  The script not only checks time tags like its predecessor
-but also checks for dropped packets and synchronization problems.
+Simple script for making sure that time tags update properly in a TBN file.  The script 
+not only checks time tags but also checks for dropped packets and synchronization problems.
 
 eyeDiagram.py
 -------------
