Several changes here.  First, simpleFringeDemux.py now works on regular TBN files since we no longer have a custom file system on the DRSUs.  Second, prepareDelayData.py has been cleaned up and improved to work over a larger frequency range.  It now also prints out fringe rates for each file in case anyone wants to see them.  splitMultiVis.py has also be tweaked to remove the '-multi' part of the input filename since the split data are not 'multi' at all.  Finally, the Makefile for fringe.c has been updated for Python 2.7.

--- a/TBN/Calibration/README
+++ b/TBN/Calibration/README
@@ -8,8 +8,8 @@ cross-correlation of TBN data for all stands relative to the outlier (#258).
 
 simpleFringeDemux.py
 --------------------
-Version of simpleFringe.py that can deal with TBN files on a DRSU with more 
-than one frequency.
+Version of simpleFringe.py that can deal with TBN files with more than one 
+frequency.
 
 .. note::
 	This version needs the fringe.so Python module (built with the 
